# hw3

./: .gitignore  CMakeLists.txt  hw3.ipynb
python/needle/backend_ndarray/: ndarray.py
sbin/: copy_win_pyd.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cpu.h  ndarray_backend_cuda.cu
tests/: ndarray_backend_cpu_test.cpp  test_ndarray.py
